-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.0 Feature Freeze
-
None
-
-
c905f21b97 (qt/qtquick3d/dev) 9acbab3364 (qt/qtquick3d/6.3) 9acbab3364 (qt/qtquick3d/6.3.0) 9acbab3364 (qt/tqtc-qtquick3d/6.3.0)
To reproduce, do the following change to the reflectionprobes example (both Color and Transparent result in a crash):
backgroundMode: SceneEnvironment.Color//SkyBox
This will result in:
1 QRhiResource::deleteLater() (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtGui.framework/Versions/A/QtGui 0x100b57769
2 rhiRenderReflectionMap(QSSGRhiContext *, QSSGLayerRenderData&, QSSGRenderReflectionMap *, QList<QSSGRenderReflectionProbe *> const&, QList<QSSGRenderableObjectHandle> const&, QSSGRef<QSSGRenderer> const&) qssgrendererimpllayerrenderdata_rhi.cpp 1757 0x10081e1f6
3 QSSGLayerRenderData::rhiPrepare() qssgrendererimpllayerrenderdata_rhi.cpp 2136 0x10081d940
4 QSSGRenderer::rhiPrepare(QSSGRenderLayer&) qssgrenderer.cpp 107 0x10081197c
5 QQuick3DSceneRenderer::rhiPrepare(QRect const&, double) qquick3dscenerenderer.cpp 449 0x10052ddfe
6 QQuick3DSceneRenderer::renderToRhiTexture(QQuickWindow *) qquick3dscenerenderer.cpp 274 0x10052dd8b
7 SGFramebufferObjectNode::render() qquick3dscenerenderer.cpp 116 0x10052da7f
8 QSGRenderer::preprocess() (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtQuick.framework/Versions/A/QtQuick 0x1014a1769
9 QSGRenderer::renderScene() (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtQuick.framework/Versions/A/QtQuick 0x1014a0f52
10 QQuickWindowPrivate::renderSceneGraph(QSize const&, QSize const&) (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtQuick.framework/Versions/A/QtQuick 0x10144176a
11 ___lldb_unnamed_symbol9088$$QtQuick (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtQuick.framework/Versions/A/QtQuick 0x1016032b5
12 ___lldb_unnamed_symbol9095$$QtQuick (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtQuick.framework/Versions/A/QtQuick 0x101603d61
13 ___lldb_unnamed_symbol3347$$QtCore (x86_64) /Users/tomi.korpipaa/Qt/6.3.0/macos/lib/QtCore.framework/Versions/A/QtCore 0x1024aecb8
14 _pthread_start (x86_64) /usr/lib/system/libsystem_pthread.dylib 0x7ff80b0dd514
15 thread_start (x86_64) /usr/lib/system/libsystem_pthread.dylib 0x7ff80b0d902f