Fix Reflection Probe crash

The crash happens when there is a light probe and
backgroundMode is set to Color. The renderPassDesc
will try to delete itself when it is null

Pick-to: 6.3
Fixes: QTBUG-99738
Change-Id: I992e03ef1f216219a85ea94a4bed40130f32358f
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>